fix: icon now is not an oval when page is collapsed

--- a/src/components/Exercises/ExerciseItem/ExerciseItem.module.css
+++ b/src/components/Exercises/ExerciseItem/ExerciseItem.module.css
@@ -71,7 +71,8 @@
   background-color: var(--gray-1);
   color: var(--light-1);
   border-radius: 100%;
-  padding: 14px 10px;
+  box-sizing: border-box;
+  padding: 12px;
   width: 50px;
   height: 50px;
   display: flex;
